syntax = "proto3";

package nut.services.auth.v1;

import "google/protobuf/empty.proto";

service User {
  rpc SignIn(SignInRequest) returns (google.protobuf.Empty);
  rpc SignUp(SignUpRequest) returns (google.protobuf.Empty);
  rpc SignOut(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message SignInRequest {
  string user = 1;
  string password = 2;
  string home = 11;
}

message SignUpRequest {
  string real_name = 1;
  string nick_name = 2;
  string email = 3;
  string password = 4;
  string home = 11;
}
